# Labs

lab4/: CMakeLists.txt
lab4/Tasks/: Task1.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
lab5/: CMakeLists.txt
lab5/Tasks/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp
lab5/libs/dynamicLib/: star_line.cpp  star_line.h
lab5/libs/input/: input.h
lab5/libs/staticLib/: for_vector.cpp  for_vector.h
lab6/: CMakeLists.txt
lab6/tasks/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
lab7/: CMakeLists.txt
lab7/tasks/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
lab8/: CMakeLists.txt  task1.cpp
lab8/tasks/: task1.cpp  task2.cpp
