cmake_minimum_required(VERSION 3.20)
project(lab4)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1 Tasks/Task1.cpp)
add_executable(Task2 Tasks/Task2.cpp)
add_executable(Task3 Tasks/Task3.cpp)
add_executable(Task4 Tasks/Task4.cpp)
add_executable(Task5 Tasks/Task5.cpp)
add_executable(Task6 Tasks/Task6.cpp)
add_executable(Task7 Tasks/Task7.cpp)
add_executable(Task8 Tasks/Task8.cpp)
add_executable(Task9 Tasks/Task9.cpp)
add_executable(Task10 Tasks/Task10.cpp)
add_executable(Task11 Tasks/Task11.cpp)
add_executable(Task12 Tasks/Task12.cpp)
add_executable(Task13 Tasks/Task13.cpp)
add_executable(Task14 Tasks/Task14.cpp)
add_executable(Task15 Tasks/Task15.cpp)


